--- a/python/config.ini
+++ b/python/config.ini
@@ -1,5 +1,6 @@
 [DB]
-host = 127.0.0.1
+host = 192.168.60.64
+port = 9090
 table_prefix = HEP
 table_prefix_separator = :
 timeout = 30000
@@ -12,10 +13,13 @@ gen_dst_path =
 root_lib_path = ./lib/libRoot.so
 
 [DOUBLE]
-double_lib_path = ./lib
+double_lib_path = ./lib/TypeSer.so
 
 [HDFS]
-host = 127.0.0.1
-port = 9000
+host = 192.168.60.64
+port = 8022
 user = root
 eventdb_dir = /eventdb
+
+[SPEEDUP]
+processes = 10
