--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#.gitignore忽略文件不会提交。忽略原则：忽略操作系统自动生成的文件，比如缩略图等；
+#忽略编译生成的中间文件、可执行文件等，也就是如果一个文件是通过另一个文件自动生成的，那自动生成的文件就没必要放进版本库，比如Java编译产生的.class文件；
+#忽略你自己的带有敏感信息的配置文件，比如存放口令的配置文件。
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
