--- a/python/config.ini
+++ b/python/config.ini
@@ -1,6 +1,6 @@
+; 本地host：127.0.0.1，没有port。另外，table_prefix_separator改为 '_',因为冒号在create_table会报错。
 [DB]
-host = 192.168.60.64
-port = 9090
+host = 127.0.0.1
 table_prefix = HEP
 table_prefix_separator = :
 timeout = 30000
@@ -16,8 +16,8 @@ root_lib_path = ./lib/libRoot.so
 double_lib_path = ./lib/TypeSer.so
 
 [HDFS]
-host = 192.168.60.64
-port = 8022
+host = 127.0.0.7
+port = 9000
 user = root
 eventdb_dir = /eventdb
 
